Patient DoB and Gender date picker

--- a/src/Antix.EASI.Web/Content/site/form.css
+++ b/src/Antix.EASI.Web/Content/site/form.css
@@ -105,4 +105,15 @@
   border-style: solid;
   border-color: #a94442 transparent;
 }
+[datepicker-popup-wrap] {
+  left: auto!important;
+  right: 0;
+}
+[datepicker-popup-wrap] .active .text-info {
+  color: #fff;
+}
+[datepicker-popup-wrap]:focus,
+[datepicker-popup-wrap] table {
+  outline: none;
+}
 /*# sourceMappingURL=form.css.map */
