--- a/src/Antix.EASI.Web/Content/site/form.less
+++ b/src/Antix.EASI.Web/Content/site/form.less
@@ -39,3 +39,16 @@
         }
     }
 }
+
+[datepicker-popup-wrap] {
+    left:auto!important;
+    right:0;
+
+    .active .text-info{
+        color:#fff;
+    }
+    &:focus,
+    table {
+        outline: none;
+    }
+}
