--- a/src/Antix.EASI.Web/client/patients/edit/patients-edit.cshtml
+++ b/src/Antix.EASI.Web/client/patients/edit/patients-edit.cshtml
@@ -38,6 +38,31 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="control-label">Date of Birth</label>
+            <div a-datetime format="mediumDate"
+                 name="dateOfBirth"
+                 ng-model="data.dateOfBirth"></div>
+            <div class="errors"
+                 ng-messages="form.dateOfBirth.$errors"
+                 ng-if="form.dateOfBirth.$invalid">
+                <div ng-message="not-null">please enter a date of birth</div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label">Gender</label>
+            <div>
+                <div class="btn-group">
+                    <label class="btn btn-default" ng-model="data.gender" btn-radio="0">Male</label>
+                    <label class="btn btn-default" ng-model="data.gender" btn-radio="1">Female</label>
+                </div>
+            </div>
+            <div class="errors"
+                 ng-messages="form.gender.$errors"
+                 ng-if="form.gender.$invalid">
+                <div ng-message="not-null">please choose a gender</div>
+            </div>
+        </div>
+        <div class="form-group">
             <span class="pull-right">
                 <button class="btn btn-primary"
                         ng-click="update()">
