--- a/src/Antix.EASI.Web/client/patients/list/patients-list.cshtml
+++ b/src/Antix.EASI.Web/client/patients/list/patients-list.cshtml
@@ -1,4 +1,4 @@
 ﻿<div class="patients-list" cell-layout-container>
-    <div patients-list-item="item"
-         ng-repeat="item in items"></div>
+    <div patients-list-item="model"
+         ng-repeat="model in models"></div>
 </div>
