fix up exams list

--- a/src/Antix.EASI.Web/client/examinations/index/examinations-index.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/index/examinations-index.cshtml
@@ -8,6 +8,6 @@
 </div>
 <div id="page-examinations-index" class="container">
     
-    <div examinations-list="examinations">List of Examinations</div>
+    <div examinations-list="model.items">List of Examinations</div>
 
 </div>
