--- a/src/Antix.EASI.Web/client/examinations/list/examinations-list.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/list/examinations-list.cshtml
@@ -1,4 +1,4 @@
 ﻿<div class="examinations-list" cell-layout-container>
-    <div examinations-list-item="item"
-         ng-repeat="item in items"></div>
+    <div examinations-list-item="model"
+         ng-repeat="model in models"></div>
 </div>
